--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -22,6 +22,10 @@ jobs:
     steps:
       - uses: actions/checkout@v2
         
+      - name: Get version
+        id: get_version
+        run: echo ::save-state name=RELEASE_VERSION::$(echo ${GITHUB_REF:10})
+        
       - name: Publish to Registry
         uses: elgohr/Publish-Docker-Github-Action@master
         with:
