--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -1,9 +1,11 @@
 name: Publish Docker image
 
 on:
-  release:
+  push:
+    # 每次 push tag 时进行构建，不需要每次 push 都构建。使用通配符匹配每次 tag 的提交，记得 tag 名一定要以 v 开头
+    tags: 
+      - v*
   
-    types: [published]
 
 env:
   # TODO: Change variable to your image's name.
