--- a/.github/workflows/docker-test1.yml
+++ b/.github/workflows/docker-test1.yml
@@ -2,7 +2,7 @@ name: Docker
 
 on:
   schedule:
-    - cron: "0 21 * * *"
+    - cron: "* */5 * * *"
 
 env:
   # TODO: Change variable to your image's name.
