--- a/.github/workflows/docker-test1.yml
+++ b/.github/workflows/docker-test1.yml
@@ -18,6 +18,8 @@ jobs:
       - name: Get spikhalskiy/zerotier-containerized version
         uses: luoqiz/docker-images-latest-version@master
         id: get_zerotier_version
+        with:
+          image: spikhalskiy/zerotier 
 
   # Push image to GitHub Packages.
   # See also https://docs.docker.com/docker-hub/builds/
@@ -31,4 +33,4 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Log into registry
-        run: echo ${{ needs.zerotier.outputs.output1 }}
+        run: echo ${{ needs.zerotier.outputs.version }}
