--- a/.github/workflows/docker-test1.yml
+++ b/.github/workflows/docker-test1.yml
@@ -13,7 +13,8 @@ jobs:
   # See also https://docs.docker.com/docker-hub/builds/automated-testing/
   zerotier:
     runs-on: ubuntu-latest
-
+    outputs:
+      zerotier_version: ${{ steps.get_zerotier_version.outputs.version }}
     steps:
       - name: Get spikhalskiy/zerotier-containerized version
         uses: luoqiz/docker-images-latest-version@master
@@ -33,4 +34,6 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Log into registry
-        run: echo ${{ needs.zerotier.outputs.version }}
+        run: echo ${{ needs.zerotier.outputs.zerotier_version }}
+      - name: test
+        run: echo '${{ needs.zerotier.outputs.zerotier_version }}'
