--- a/.github/workflows/docker-test1.yml
+++ b/.github/workflows/docker-test1.yml
@@ -36,7 +36,7 @@ jobs:
         uses: luoqiz/docker-images-latest-version@master
         id: get_nginx_version
         with:
-          image: nginx          
+          image: library/nginx        
       
 
   # Push image to GitHub Packages.
