--- a/.github/workflows/docker-test1.yml
+++ b/.github/workflows/docker-test1.yml
@@ -55,5 +55,5 @@ jobs:
       - name: test
         run: echo '${{ needs.zerotier.outputs.moon_version }}'
       - name: compare
-        if: ${{ needs.zerotier.outputs.moon_version ==  needs.zerotier.outputs.zerotier_version }}
+        if: ${{ needs.zerotier.outputs.moon_version !=  needs.zerotier.outputs.zerotier_version }}
         run: echo true
