--- a/.github/workflows/docker-test1.yml
+++ b/.github/workflows/docker-test1.yml
@@ -55,5 +55,13 @@ jobs:
       - name: test
         run: echo '${{ needs.zerotier.outputs.moon_version }}'
       - name: compare
-        if: ${{ needs.zerotier.outputs.moon_version !=  needs.zerotier.outputs.zerotier_version }}
+        
         run: echo true
+      - name: Publish to Registry
+        if: ${{ needs.zerotier.outputs.moon_version !=  needs.zerotier.outputs.zerotier_version }}
+        uses: elgohr/Publish-Docker-Github-Action@master
+        with:
+          name: ${{ env.IMAGE_NAME }}
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+          tags: "latest,${{ needs.zerotier.outputs.zerotier_version }}" 
