--- a/.github/workflows/docker-test1.yml
+++ b/.github/workflows/docker-test1.yml
@@ -5,24 +5,24 @@ on:
     branches: 
       - master
   schedule:
-    - cron: "* */3 * * *"
+    - cron: "0 20 * * *"
 
 env:
   # TODO: Change variable to your image's name.
-  IMAGE_NAME: luoqiz/zerotier-one
+  IMAGE_NAME: luoqiz/zerotier-moon
 
 jobs:
   # Run tests.
   # See also https://docs.docker.com/docker-hub/builds/automated-testing/
-  zerotier:
+  get_version:
     runs-on: ubuntu-latest
     outputs:
-      zerotier_version: ${{ steps.get_zerotier_version.outputs.version }}
+      zerotier_version: ${{ steps.get_zerotier_containerized_version.outputs.version }}
       moon_version: ${{ steps.get_zerotier_moon_version.outputs.version }}
     steps:
       - name: Get spikhalskiy/zerotier-containerized version
         uses: luoqiz/docker-images-latest-version@master
-        id: get_zerotier_version
+        id: get_zerotier_containerized_version
         with:
           image: spikhalskiy/zerotier 
       
@@ -31,32 +31,19 @@ jobs:
         id: get_zerotier_moon_version
         with:
           image: luoqiz/zerotier-moon
-        
-      - name: Get nginx version
-        uses: luoqiz/docker-images-latest-version@master
-        id: get_nginx_version
-        with:
-          image: library/nginx        
       
 
   # Push image to GitHub Packages.
   # See also https://docs.docker.com/docker-hub/builds/
   push:
     # Ensure test job passes before pushing image.
-    needs: zerotier
+    needs: get_version
 
     runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v2
 
-      - name: Log into registry
-        run: echo ${{ needs.zerotier.outputs.zerotier_version }}
-      - name: test
-        run: echo '${{ needs.zerotier.outputs.moon_version }}'
-      - name: compare
-        
-        run: echo true
       - name: Publish to Registry
         if: ${{ needs.zerotier.outputs.moon_version !=  needs.zerotier.outputs.zerotier_version }}
         uses: elgohr/Publish-Docker-Github-Action@master
